ZVP mean energies

--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -36,9 +36,9 @@ When working with emittances, most frequently in the literature it is the \texti
 \begin{equation}
 	\epsilon^i_\mathrm{rms} = \frac{\epsilon^i_\mathrm{rms}}{\gamma \beta_\mathrm{L}},
 \end{equation}
-where $\gamma = 1/\sqrt{1-\beta^2}$ refers to the beam's energy and $\beta_\mathrm{L} \approx c$ is the ultrarelativistic beam's longitudinal speed.
+where $\gamma = 1/\sqrt{1-\beta^2}$ refers to the beam's mean energy and $\beta_\mathrm{L} \approx c$ is the ultrarelativistic beam's longitudinal speed.
 
-The Courant-Snyder invariant which describes the ellipse that corresponds to the emittance is
+The Courant-Snyder invariant which describes the ellipse that corresponds to the emittance is\footnote{Regrettably $\beta$ and $\gamma$ are the standard notations for the Twiss parameters, at all other locations in this thesis, these parameters will refer to the standard relativistic beta and gamma factors of objects respectively.}
 \begin{equation}
 	\epsilon^i_\mathrm{rms}  = \gamma x_i^2 + 2\alpha x x' \beta x_i'^2,
 \end{equation}
