ZVP mean energies2

--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -456,6 +456,17 @@ The dependence on both $a_0$ and $n_\mathrm{e}$ demonstrates these electron bunc
 Slightly unfortunately, the energy of such electron bunches cannot be directly compared to the ZVP energy relations as as aforementioned after escaping the potential, the electron bunch experiences further direct laser acceleration before reaching the detection point. Indeed, Thévenet \textit{et al} \cite{thevenetVacuumLaserAcceleration2016} suggested that attosecond electron bunches produced in reflection exhibit precisely the phase and energy properties required to `surf' the reflected laser pulse and experience vast acceleration gradients over the Rayleigh length of the laser pulse. This process is known as Vacuum Laser Acceleration. It seems highly likely that this process occurs for electron bunches produced in transmission. This seemingly unfortunately situation in reality provided a fully optical scheme to create GeV nano-Coulomb electron bunches from the most simple of setups: a laser interacting with a mass limited solid target (thus reducing the alignment complexity.). 
 
 Returning to the determination of the electron bunch energy at the measurement point, consider now the journey of the electron bunch after expulsion from the plasma bulk. It is rotated back towards the plasma bulk by the magnetic field of the subsequent peak of the laser pulse, then travelling at approximately $c$ it surfs the peak, experiencing an approximately constant accelerating electric field from the laser pulse at some fraction $f$ of the laser field peak. The work done by this field is then
+\begin{equation}
+	\Delta T = \int e \mathbf{E} \cdot \mathrm{d}\mathbf{x}.
+\end{equation}
+Note that for this process, the laser pulse electric field and electron bunch direction of travel will always be aligned and therefore $\Delta T$ will always increase the energy of the electron bunch, thus,
+\begin{equation}
+	\Delta T = e f E_\mathrm{L} \Delta y,
+\end{equation}
+where $\Delta y$ is the distance along $y$ from the plasma edge to the detection point. Accounting for the Gaussian spatial profile of the laser, the gamma factor after both acceleration phases for this simulation setup is then
+\begin{equation}
+	a
+\end{equation}
 
 
 \subsection{Total electron bunch energy scaling}
